--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -7,32 +7,32 @@ h1 {
 h2 {
   font: $h2;
   margin-bottom: $padding;
-  padding-top: $padding;
+  padding-top: $padding * 2;
 }
 
 h3 {
   font: $h3;
   text-transform: uppercase;
   margin-bottom: $half-padding + $quarter-padding;
-  padding-top: $padding;
+  padding-top: $padding * 2;
 }
 
 h4 {
   font: $h4;
   margin-bottom: $half-padding + $quarter-padding;
-  padding-top: $half-padding
+  padding-top: $padding
 }
 
 h5 {
   font: $h5;
   margin-bottom: $half-padding;
-  padding: ($half-padding + ($quarter-padding / 2)) 0 ($quarter-padding / 2);
+  padding: ($padding + ($quarter-padding / 2)) 0 ($quarter-padding / 2);
 }
 
 h6 {
   font: $h6;
   margin-bottom: $half-padding;
-  padding: calc(#{$half-padding} + 1px) 0 calc(#{$quarter-padding} - 1px);
+  padding: calc(#{$padding} + 1px) 0 calc(#{$quarter-padding} - 1px);
 }
 
 p {
@@ -40,4 +40,5 @@ p {
   margin-top: -1px;
   margin-bottom: $padding;
   padding-bottom: 1px;
+  color: dimgray;
 }
