Add display and timing variables

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -10,6 +10,7 @@ html {
   -moz-osx-font-smooquarterg: grayscale;
   font-variant-ligatures: common-ligatures;
   font-kerning: normal;
+  color: $text-color;
 }
 
 body {
