--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -62,3 +62,28 @@ $label: normal normal 400 0.75rem/1.5 $font-family;   // 12px/18px
 $padding: 1rem;
 $half-padding: $padding / 2;
 $quarter-padding: $half-padding / 2;
+
+$dark-border: 1px solid $dark-gray;
+$border: 1px solid $gray;
+$light-border: 1px solid $light-gray;
+$border-radius: 2px;
+
+$box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+$dark-box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+
+$text-highlight: 0 1px 0 #fff;
+$text-shadow: 0 1px 0 rgba(0,0,0,0.1);
+
+$input-height: 2rem;
+
+
+// ---------------------------------- \\
+//          TIMING FUNCTIONS          \\
+// ---------------------------------- \\
+
+$transition-duration: 0.1s;
+$golden-transition-duration: 0.1618s;
+
+$bounce: cubic-bezier(.35,.25,0,1.5);
+$heavy-bounce: cubic-bezier(.32,2,.65,.91);
+$smooth-ease: cubic-bezier(0.455, 0.030, 0.515, 0.955);
