--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,12 +2,14 @@ h1 {
   font: $h1;
   margin-bottom: $padding + $quarter-padding;
   padding-top: $padding;
+  letter-spacing: 0.01em;
 }
 
 h2 {
   font: $h2;
   margin-bottom: $padding;
   padding-top: $padding * 2;
+  letter-spacing: -0.01em;
 }
 
 h3 {
@@ -15,6 +17,7 @@ h3 {
   text-transform: uppercase;
   margin-bottom: $half-padding + $quarter-padding;
   padding-top: $padding * 2;
+  letter-spacing: 0.02em;
 }
 
 h4 {
@@ -27,12 +30,14 @@ h5 {
   font: $h5;
   margin-bottom: $half-padding;
   padding: ($padding + ($quarter-padding / 2)) 0 ($quarter-padding / 2);
+  letter-spacing: 0.02em;
 }
 
 h6 {
   font: $h6;
   margin-bottom: $half-padding;
   padding: calc(#{$padding} + 1px) 0 calc(#{$quarter-padding} - 1px);
+  letter-spacing: 0.01em;
 }
 
 p {
