Add link styles

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -12,12 +12,11 @@ $lighter-gray: #F5F5F5;
 $sg-pink: #FF7A67;
 $sg-fuchsia: #CC74B7;
 $sg-purple: #977FD2;
-$sg-blue: #4f9fcf;
+$sg-blue: #2c97de;
 $sg-navy: #2f6f9f;
 $sg-aqua: #00C9BC;
 $sg-teal: #099;
 $sg-green: #39C46C;
-$sg-chartreuse: #80C80A;
 $sg-yellow: #fdbb37;
 $sg-orange: #E87E4B;
 $sg-red: #D63A3A;
@@ -39,7 +38,7 @@ $input-background-color: #FCFCFC;
 
 $text-color: $black;
 $light-text-color: $dark-gray;
-$link-color: $color-primary;
+$link-color: $color-secondary;
 
 $base-font-size: 16px;
 
