--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -23,7 +23,7 @@ h3 {
 h4 {
   font: $h4;
   margin-bottom: $half-padding + $quarter-padding;
-  padding-top: $padding
+  padding-top: $padding;
 }
 
 h5 {
