Add navigation styles

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -22,6 +22,7 @@ a {
   color: $link-color;
   text-decoration: none;
   position: relative;
+  transition: color $transition-duration $smooth-ease;
 
   &:hover {
     color: $color-primary;
