--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -1,10 +1,62 @@
 .form-group {
+  position: relative;
 
+  &--info {
+    .form-input {
+      border-color: $color-info;
+      background-color: lighten($color-info, 45%);
+    }
+
+    .form-input-icon {
+      color: $color-info;
+    }
+  }
+
+
+  &--warning {
+    .form-input {
+      border-color: $color-warning;
+      background-color: lighten($color-warning, 37%);
+    }
+
+    .form-input-icon {
+      color: $color-warning;
+    }
+  }
+
+
+  &--danger {
+    .form-input {
+      border-color: $color-danger;
+      background-color: lighten($color-danger, 45%);
+    }
+
+    .form-input-icon {
+      color: $color-danger;
+    }
+  }
+
+
+  &--success {
+    .form-input {
+      border-color: $color-success;
+      background-color: lighten($color-success, 45%);
+    }
+
+    .form-input-icon {
+      color: $color-success;
+    }
+  }
+
+  &--disabled .form-input-icon {
+    color: $gray;
+  }
 }
 
 .form-input {
   display: block;
   min-width: 12rem;
+  width: 100%;
   height: 2rem;
   padding: 0 $half-padding;
   line-height: 2rem;
@@ -14,6 +66,15 @@
   border: $border;
   border-radius: $border-radius;
   transition: all $golden-transition-duration $smooth-ease;
+
+  &::placeholder {
+    color: $light-text-color;
+  }
+
+  &:hover,
+  &.form-input--hover {
+    border-color: lighten($color-secondary, 20%);
+  }
 
   &:focus,
   &.form-input--focus {
@@ -25,8 +86,92 @@
 
   &.disabled,
   &[disabled] {
+    background-color: $light-gray;
     border: $dark-border;
     opacity: 0.25;
     cursor: not-allowed;
+  }
+
+  &.required,
+  &[required] {
+    padding-right: $padding * 2;
+  }
+
+  &.readonly,
+  &[readonly] {
+    background-color: transparent;
+    border: none;
+
+    &:focus {
+      box-shadow: none;
+    }
+  }
+
+  &--icon {
+    padding-left: $padding * 2;
+  }
+}
+
+.form-input-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  width: $padding * 2;
+  height: $padding * 2;
+  font-size: 0.8em;
+  color: $light-text-color;
+}
+
+.form-input-icon--prepend {
+  left: 0;
+}
+
+.form-input-icon--append {
+  right: 0;
+}
+
+.form-input-icon--required {
+  font-size: 0.6em;
+  color: $color-secondary;
+
+  &:before {
+    display: block;
+    position: absolute;
+    top: -4px;
+    left: 50%;
+    content: "Required";
+    font-size: 1.2em;
+    color: #fff;
+    padding: $quarter-padding;
+    background-color: $black;
+    border-radius: $border-radius;
+    transform: translate(-50%, -100%);
+    opacity: 0;
+    pointer-events: none;
+    transition: all $transition-duration $smooth-ease;
+  }
+
+  &:after {
+    position: absolute;
+    top: 4px;
+    left: 50%;
+    content: "";
+    width: 0;
+    height: 0;
+    border-width: 4px;
+    border-style: solid;
+    border-color: $black transparent transparent transparent;
+    transform: translate(-50%, -100%);
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  &:hover {
+    &:before,
+    &:after {
+      opacity: 1;
+    }
   }
 }
