--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -14,7 +14,7 @@ h2 {
 
 h3 {
   font: $h3;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   margin-bottom: $half-padding + $quarter-padding;
   padding-top: $padding * 2;
   letter-spacing: 0.02em;
