--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -1,5 +1,10 @@
+$input-height: $padding * 2;
+$help-text-height: $padding * 1.5;
+
 .form-group {
   position: relative;
+  padding-bottom: $help-text-height;
+  margin-bottom: $padding;
 
   &--info {
     .form-input {
@@ -57,9 +62,9 @@
   display: block;
   min-width: 12rem;
   width: 100%;
-  height: 2rem;
+  height: $input-height;
   padding: 0 $half-padding;
-  line-height: 2rem;
+  line-height: $input-height;
   font: $p;
   color: $text-color;
   background-color: $input-background-color;
@@ -92,11 +97,6 @@
     cursor: not-allowed;
   }
 
-  &.required,
-  &[required] {
-    padding-right: $padding * 2;
-  }
-
   &.readonly,
   &[readonly] {
     background-color: transparent;
@@ -117,9 +117,9 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  bottom: 0;
-  width: $padding * 2;
-  height: $padding * 2;
+  bottom: $help-text-height;
+  width: $input-height;
+  height: $input-height;
   font-size: 0.8em;
   color: $light-text-color;
 }
@@ -130,6 +130,14 @@
 
 .form-input-icon--append {
   right: 0;
+}
+
+.form-input-icon--success {
+  color: $color-success;
+}
+
+.form-input-icon--danger {
+  color: $color-danger;
 }
 
 .form-input-icon--required {
@@ -166,6 +174,7 @@
     transform: translate(-50%, -100%);
     opacity: 0;
     pointer-events: none;
+    transition: all $transition-duration $smooth-ease;
   }
 
   &:hover {
@@ -173,5 +182,25 @@
     &:after {
       opacity: 1;
     }
+  }
+}
+
+.help-block {
+  display: inline-block;
+  position: absolute;
+  font: $h6;
+  line-height: $help-text-height;
+  color: $light-text-color;
+
+  &--info {
+    color: $color-info;
+  }
+
+  &--success {
+    color: $color-success;
+  }
+
+  &--danger {
+    color: $color-danger;
   }
 }
