--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -11,27 +11,17 @@ $small-button-height: $button-height * 0.75;
   line-height: 1;
   color: #fff;
   background-color: $color-secondary;
-  background: linear-gradient(to top, darken($color-secondary, 5%) 0%, $color-secondary 65%);
   border: 1px solid $color-primary;
   border-radius: $border-radius;
   cursor: pointer;
   box-shadow: $dark-box-shadow;
-
-  &--hover,
-  &:hover {
-    background: linear-gradient(to top, darken($color-primary, 7%) 0%, $color-primary 65%);
-  }
+  @include button-gradient($color-secondary, $color-primary)
 
   &--pressed,
   &:active,
   &:focus {
-    background: linear-gradient(to top, $color-primary 0%, $color-primary 100%);
     box-shadow: 0 0 0 1px #fff inset;
     outline: none;
-
-    &:hover {
-      background: linear-gradient(to top, $color-primary 0%, $color-primary 100%);
-    }
   }
 
   &--icon {
@@ -63,7 +53,7 @@ $small-button-height: $button-height * 0.75;
 
   &--outline {
     color: $color-secondary;
-    background: linear-gradient(to top, #fff 0%, #fff 100%);
+    @include button-gradient(#fff, $color-primary);
 
     .button__icon {
       color: $color-secondary;
@@ -72,7 +62,6 @@ $small-button-height: $button-height * 0.75;
     &.button--hover,
     &:hover {
       color: #fff;
-      background: linear-gradient(to top, darken($color-primary, 7%) 0%, $color-primary 65%);
 
       .button__icon {
         color: #fff;
@@ -83,7 +72,6 @@ $small-button-height: $button-height * 0.75;
     &:active,
     &:focus {
       color: #fff;
-      background: $color-primary;
 
       .button__icon {
         color: #fff;
@@ -96,6 +84,7 @@ $small-button-height: $button-height * 0.75;
     background: transparent;
     border-color: transparent;
     box-shadow: none;
+    @include button-gradient(transparent, $color-primary);
 
     .button__icon {
       color: $color-secondary;
@@ -104,7 +93,6 @@ $small-button-height: $button-height * 0.75;
     &.button--hover,
     &:hover {
       color: #fff;
-      background: linear-gradient(to top, darken($color-primary, 7%) 0%, $color-primary 65%);
       box-shadow: $dark-box-shadow;
 
       .button__icon {
@@ -116,7 +104,6 @@ $small-button-height: $button-height * 0.75;
     &:focus,
     &:active {
       color: #fff;
-      background: $color-primary;
       box-shadow: 0 0 0 1px #fff inset;
 
       .button__icon {
