Adjust disabled text field styles to match disabled button styles

--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -175,10 +175,12 @@ $help-text-height: $label-height;
 
   &.disabled,
   &[disabled] {
-    background-color: $light-gray;
-    border: $dark-border;
-    opacity: 0.25;
+    background-color: $lighter-gray;
     cursor: not-allowed;
+
+    &:hover {
+      border: $border;
+    }
   }
 
   &.readonly,
