Add descriptions and a Tables section

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -52,4 +52,5 @@ code {
   padding: ($quarter-padding / 2) $quarter-padding;
   border-radius: $border-radius;
   font-family: monospace;
+  white-space: pre;
 }
