--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -44,7 +44,7 @@ $link-color: $color-secondary;
 
 $base-font-size: 16px;
 
-$font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family: 'Clear Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 $h1: normal normal 900 1.75rem/1.572 $font-family;    // 28px/44px
 $h2: normal normal 400 1.375rem/2.182 $font-family;   // 22px/48px
