--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -136,7 +136,7 @@ $help-text-height: $label-height;
   }
 
   &--disabled .form-group__input-icon {
-    color: $gray;
+    color: $light-text-color;
   }
 }
 
