--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -19,6 +19,7 @@ $help-text-height: $label-height;
     "label label label"
     "input-left-icon input input-right-icon"
     "help-text help-text help-text";
+  align-content: start;
 }
 
 .form-group__label {
@@ -78,6 +79,26 @@ $help-text-height: $label-height;
 .form-group__checkbox-label,
 .form-group__radio-label {
   grid-area: label;
+}
+
+.form-group--textarea {
+  grid-template-rows:
+    auto
+    $input-height
+    minmax(#{($input-height * 2) + $half-padding}, auto)
+    auto;
+  grid-template-areas:
+    "label           label     label"
+    "input-left-icon .         input-right-icon"
+    "input           input     input"
+    "help-text       help-text help-text";
+
+  .form-group__input {
+    grid-row: 2 / -2;
+    grid-column: 1 / -1;
+    padding-top: $quarter-padding;
+    padding-bottom: $quarter-padding;
+  }
 }
 
 
