--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -27,10 +27,14 @@ footer {
   grid-area: footer;
 }
 
+.grid {
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: $padding;
+}
+
 .grid-columns {
   display: grid;
-  // grid-auto-flow: column;
-  // grid-auto-columns: auto-fill;
   grid-template-columns: repeat( 4, 1fr );
   grid-gap: 0 $padding;
 }
