--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -29,7 +29,7 @@ h4 {
 h5 {
   font: $h5;
   margin-bottom: $half-padding;
-  padding: ($padding + ($quarter-padding / 2)) 0 ($quarter-padding / 2);
+  padding: $padding 0 $quarter-padding;
   letter-spacing: 0.02em;
 }
 
