Add comment sections to stylesheets

--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -1,5 +1,14 @@
+// ---------------------------------- \\
+//             VARIABLES              \\
+// ---------------------------------- \\
+
 $button-height: $padding * 2;
 $small-button-height: $button-height * 0.75;
+
+
+// ---------------------------------- \\
+//              DISPLAY               \\
+// ---------------------------------- \\
 
 .button {
   display: flex;
