--- a/src/styles/base/_tables.scss
+++ b/src/styles/base/_tables.scss
@@ -1,5 +1,14 @@
+// ---------------------------------- \\
+//             VARIABLES              \\
+// ---------------------------------- \\
+
 $table-cell-height: $padding * 3;
 $condensed-table-cell-height: $padding * 2;
+
+
+// ---------------------------------- \\
+//              DISPLAY               \\
+// ---------------------------------- \\
 
 .table {
   display: grid;
