--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -7,7 +7,9 @@
     top: -4px;
     left: 50%;
     content: attr(aria-label);
-    font-size: 1.2em;
+    font: $label;
+    font-weight: 400;
+    line-height: 1;
     color: #fff;
     padding: $quarter-padding;
     background-color: $black;
