--- a/src/styles/base/_font.scss
+++ b/src/styles/base/_font.scss
@@ -33,6 +33,13 @@
 
 @font-face {
   font-family: "Clear Sans";
+  src: url("../fonts/ClearSans-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Clear Sans";
   src: url("../fonts/ClearSans-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
