Refactor default text color

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -38,7 +38,7 @@ $nav-background-color: lighten($lighter-gray, 2%);
 //             TYPOGRAPHY             \\
 // ---------------------------------- \\
 
-$text-color: $black;
+$text-color: $darker-gray;
 $light-text-color: $dark-gray;
 $link-color: $color-secondary;
 
