Tooltips: replace px values with rem variables and add letter spacing

--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -8,6 +8,7 @@
     left: 50%;
     content: attr(aria-label);
     font: $label;
+    letter-spacing: 0.01em;
     line-height: 1;
     color: #fff;
     padding: ($quarter-padding * 0.25) $quarter-padding ($quarter-padding * 0.75);
@@ -22,12 +23,12 @@
 
   &:after {
     position: absolute;
-    top: 4px;
+    top: $quarter-padding;
     left: 50%;
     content: "";
     width: 0;
     height: 0;
-    border-width: 4px;
+    border-width: $quarter-padding;
     border-style: solid;
     border-color: $black transparent transparent transparent;
     transform: translate(-50%, -100%);
